--- a/index6.html
+++ b/index6.html
@@ -9,7 +9,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                height: 100vh;
+                /*height: 100vh;*/
                 margin: 0;
                 background-color: #9E9C9B; /* Or any color you prefer */
             }
@@ -284,10 +284,10 @@
         <p>Red = 19 hours or less - Orange = 27 hours or less<br>Gold = 32 hours or less - Green = more than 33 hours</p>
         <p>YTD Performance is the percentage of Billed Time to On-Premise time</p>
         <p>Average Shop Performance:</p>
-        <div id="averageGaugeContainer">
-            <div id="averageGauge" class="bar new-gauge"></div>
-            <div id="averagePercentageDisplay" class="percentage"></div>
-        </div>
+            <div id="averageGaugeContainer">
+                <div id="averagePercentageDisplay" class="percentage"></div>
+                <div id="averageGauge" class="bar new-gauge"></div>
+            </div>       
     </div>
 </body>
 
