--- a/index6.html
+++ b/index6.html
@@ -285,8 +285,8 @@
         <p>YTD Performance is the percentage of Billed Time to On-Premise time</p>
         <p>Average Shop Performance:</p>
             <div id="averageGaugeContainer">                
-                <div id="averageGauge" class="bar new-gauge"></div>
-                    <div id="averagePercentageDisplay" class="percentage"></div>
+                <div id="averageGauge" class="bar new-gauge">
+                <div id="averagePercentageDisplay" class="percentage">
             </div>       
     </div>
 </body>
