--- a/text_rotator.html
+++ b/text_rotator.html
@@ -24,7 +24,7 @@
         }
         #text-rotator {
             font-size: 58px;
-            text-shadow: 0 0 3px #e8eb34;
+            text-shadow: 0 0 5px #ff000;
             color: blue;
             
             text-align: center; /* Center justify text */
