--- a/text_rotator.html
+++ b/text_rotator.html
@@ -24,9 +24,8 @@
         }
         #text-rotator {
             font-size: 58px;
-            text-shadow: 0 0 5px #ff000;
+            text-shadow: 0 0 5px #ff0000; /* Corrected red text shadow */
             color: blue;
-            
             text-align: center; /* Center justify text */
             margin: 0; /* Ensure no extra space is added around the text */
         }
