--- a/text_rotator.html
+++ b/text_rotator.html
@@ -25,8 +25,8 @@
         #text-rotator {
             font-size: 58px;
             font-family: Arial, sans-serif; /* Set font to Arial */
-            text-shadow: 0 0 5px #ff0000; /* Red text shadow */
-            color: blue;
+            text-shadow: 0 0 5px #000000; /* Red text shadow */
+            color: red;
             text-align: center; /* Center justify text */
             margin: 0; /* Ensure no extra space is added around the text */
         }
