--- a/test.html
+++ b/test.html
@@ -1,46 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Gauge with HTML and CSS</title>
-<style>
-  .gauge {
-    position: relative;
-    width: 200px;
-    height: 100px;
-    border-radius: 100px 100px 0 0;
-    background-color: lightgrey;
-    overflow: hidden;
-  }
-  .gauge:before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    width: 4px;
-    height: 80px;
-    background-color: red;
-    transform: translateX(-50%) rotate(68deg); /* Adjust this to change the needle position */
-    transform-origin: 50% 100%;
-  }
-  .gauge-cover {
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    background-color: lightgrey;
-    border-radius: 50%;
-    left: 50%;
-    bottom: 0;
-    transform: translateX(-50%);
-  }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gauge Example</title>
+  <!-- Include Gauge.js library -->
+  <script src="https://cdn.jsdelivr.net/npm/progressbar.js/dist/progressbar.min.js"></script>
 </head>
 <body>
+  <div id="gauge-container"></div>
 
-<div class="gauge">
-  <div class="gauge-cover"></div>
-</div>
+  <script>
+    // Creating a gauge instance
+    var gauge = new ProgressBar.Circle('#gauge-container', {
+      strokeWidth: 6,
+      trailWidth: 2,
+      easing: 'easeInOut',
+      duration: 1400,
+      text: {
+        autoStyleContainer: false
+      },
+      from: { color: '#FFEA82', width: 2 },
+      to: { color: '#ED6A5A', width: 6 },
+      step: function(state, circle) {
+        circle.path.setAttribute('stroke', state.color);
+        circle.path.setAttribute('stroke-width', state.width);
 
+        var value = Math.round(circle.value() * 100);
+        if (value === 0) {
+          circle.setText('');
+        } else {
+          circle.setText(value + '%');
+        }
+      }
+    });
+
+    // Set the initial value
+    gauge.animate(0.6); // Example value, change as needed
+  </script>
 </body>
 </html>
