--- a/test.html
+++ b/test.html
@@ -2,42 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=0.25">
-  <title>Gauge Example</title>
-  <!-- Include Gauge.js library -->
-  <script src="https://cdn.jsdelivr.net/npm/progressbar.js/dist/progressbar.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FlexGauge Example</title>
+  <!-- Include FlexGauge.js library -->
+  <script src="FlexGauge.js"></script>
+  <style>
+    #gauge-container {
+      width: 200px;
+      height: 200px;
+    }
+  </style>
 </head>
 <body>
   <div id="gauge-container"></div>
 
   <script>
     // Creating a gauge instance
-    var opts = {
-  angle: 0.15, // The span of the gauge arc
-  lineWidth: 0.44, // The line thickness
-  radiusScale: 1, // Relative radius
-  pointer: {
-    length: 0.6, // // Relative to gauge radius
-    strokeWidth: 0.035, // The thickness
-    color: '#000000' // Fill color
-  },
-  limitMax: false,     // If false, max value increases automatically if value > maxValue
-  limitMin: false,     // If true, the min value of the gauge will be fixed
-  colorStart: '#6FADCF',   // Colors
-  colorStop: '#8FC0DA',    // just experiment with them
-  strokeColor: '#E0E0E0',  // to see which ones work best for you
-  generateGradient: true,
-  highDpiSupport: true,     // High resolution support
-  
-};
-var target = document.getElementById('foo'); // your canvas element
-var gauge = new Gauge(target).setOptions(opts); // create sexy gauge!
-gauge.maxValue = 3000; // set max gauge value
-gauge.setMinValue(0);  // Prefer setter over gauge.minValue = 0
-gauge.animationSpeed = 32; // set animation speed (32 is default value)
-gauge.set(1244); // set actual value
-
-
+    var gauge = new FlexGauge({
+      id: 'gauge-container',
+      type: 'gauge',
+      minValue: 0,
+      maxValue: 100,
+      value: 60,
+      segments: [
+        { color: '#FF0000', label: 'Low', value: 30 },
+        { color: '#FFFF00', label: 'Medium', value: 60 },
+        { color: '#00FF00', label: 'High', value: 100 }
+      ],
+      showValue: true
+    });
   </script>
 </body>
 </html>
