--- a/test.html
+++ b/test.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FlexGauge Example</title>
   <!-- Include FlexGauge.js library -->
-  <script type="text/javascript" src="FlexGauge.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="FlexGauge.js"></script>
   <style>
     #gauge-container {
       width: 200px;
