--- a/test.html
+++ b/test.html
@@ -40,7 +40,7 @@
       var gauge = new FlexGauge({
         appendTo: '#gauge-container',
         dialValue: true,
-        dialLabel: true
+        dialLabel: false
       });
     </script>
 </body>
