--- a/test.html
+++ b/test.html
@@ -35,12 +35,14 @@
 </head>
 <body>
   <div id="gauge-container"></div>
+  <div class="fg-dial">30%</div>
     <script>
       // Creating a gauge instance
       var gauge = new FlexGauge({
         appendTo: '#gauge-container',
         dialValue: true,
         dialLabel: false
+        
       });
     </script>
 </body>
