--- a/test.html
+++ b/test.html
@@ -39,11 +39,12 @@
       <script>
         // Creating a gauge instance
         var gauge = new FlexGauge({
-          appendTo: '#gauge-container',
-          dialValue: true,
-          dialLabel: false
+                    appendTo: '#example5',
+                    dialValue: true,
+                    dialLabel: true
+                });
           
-        });
+      
       </script>
 </body>
 </html>
