--- a/test.html
+++ b/test.html
@@ -20,53 +20,52 @@
       position: absolute;
       top: 0;
       left: 0;
-    }
-
-    /* Styling for the gauge background */
-    .gauge-background {
-      background: #f4f4f4;
-      border: 10px solid #ccc;
+      transform: rotate(-135deg);
+      background: linear-gradient(90deg, transparent 50%, #e6e6e6 50%);
     }
 
     /* Styling for the gauge fill */
     .gauge-fill {
-      background: #4CAF50;
-      border: 10px solid transparent;
-      border-top-color: #4CAF50;
-      border-right-color: #4CAF50;
-      border-radius: 50%;
-      transform-origin: 50% 100%; /* Rotate from bottom center */
-      transform: rotate(-135deg); /* Start position */
-      transition: transform 0.5s ease-in-out; /* Smooth transition */
+      width: 50%;
+      height: 100%;
+      background: linear-gradient(90deg, #4CAF50 50%, transparent 50%);
+      border-radius: 50% 0 0 50% / 50% 50% 0 0;
+      position: absolute;
+      top: 0;
+      left: 0;
+      transform-origin: 100%;
+      transition: transform 0.5s ease-in-out;
     }
 
     /* Styling for the gauge needle */
     .gauge-needle {
-      width: 2px;
-      height: 80px;
-      background-color: red;
+      width: 4px;
+      height: 60%;
+      background-color: #4CAF50;
       position: absolute;
       top: 50%;
       left: 50%;
-      transform-origin: 0% 100%; /* Rotate from bottom */
-      transform: translateX(-50%) rotate(-45deg); /* Start position */
-      transition: transform 0.5s ease-in-out; /* Smooth transition */
+      transform-origin: 100% 100%;
+      transform: translate(-50%, -100%) rotate(-135deg);
+      transition: transform 0.5s ease-in-out;
     }
   </style>
 </head>
 <body>
   <div id="gauge-container">
-    <div class="gauge-dial gauge-background"></div>
-    <div class="gauge-dial gauge-fill"></div>
+    <div class="gauge-dial"></div>
+    <div class="gauge-fill"></div>
     <div class="gauge-needle"></div>
   </div>
 
   <script>
     // Function to update the gauge needle based on a value
     function updateGauge(value) {
+      var gaugeFill = document.querySelector('.gauge-fill');
       var gaugeNeedle = document.querySelector('.gauge-needle');
-      var angle = (value / 100) * 270 - 135; // Calculate angle from value
-      gaugeNeedle.style.transform = 'translateX(-50%) rotate(' + angle + 'deg)';
+      var angle = (value / 100) * 270; // Calculate angle from value
+      gaugeFill.style.transform = 'rotate(' + angle + 'deg)';
+      gaugeNeedle.style.transform = 'translate(-50%, -100%) rotate(' + (angle - 135) + 'deg)';
     }
 
     // Example usage: update the gauge to 75%
