--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
 <body>
     <canvas id="gauge" width="400" height="300"></canvas>
 
-    <script src="gauge.js"></script>
+    <script src="gauge.coffee"></script>
     <script>
         // Assuming the gauge.js defines a `Gauge` class or function
         document.addEventListener('DOMContentLoaded', function () {
