--- a/test.html
+++ b/test.html
@@ -3,37 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gauge Example</title>
+    <title>Gauge Control Example</title>
+    <link rel="stylesheet" href="material-gauge.css">
 </head>
 <body>
-    <canvas id="gauge" width="400" height="300"></canvas>
 
-    <script src="gauge.js"></script>
-    <script>
-        // Assuming the gauge.js defines a `Gauge` class or function
-        document.addEventListener('DOMContentLoaded', function () {
-            var target = document.getElementById('gauge'); // Get the canvas element
-            var gauge = new Gauge(target).setOptions({ // Create and configure the gauge
-                // Gauge configuration
-                // These options are placeholders; replace them with actual configuration options
-                angle: 0.15, // The span of the gauge arc
-                lineWidth: 0.44,
-                pointer: {
-                    length: 0.9, // Relative to gauge radius
-                    strokeWidth: 0.035, // The thickness
-                    color: '#000000' // Fill color
-                },
-                colorStart: '#6FADCF', // Colors
-                colorStop: '#8FC0DA', // just experiment with them
-                strokeColor: '#E0E0E0', // to see which ones work best for you
-                generateGradient: true
-            });
+<div class="gauge gauge__liveupdate" id="gauge">
+    <div class="gauge--container">
+        <div class="gauge--marker"></div>
+        <div class="gauge--background"></div>
+        <div class="gauge--center"></div>
+        <div class="gauge--data"></div>
+        <div class="gauge--needle"></div>
+    </div>
+    <div class="gauge--labels mdl-typography--headline">
+        <span class="gauge--label__low">E</span>
+        <span class="gauge--label__spacer"></span>
+        <span class="gauge--label__high">F</span>
+    </div>
+</div>
 
-            gauge.maxValue = 3000; // set max gauge value
-            gauge.setMinValue(0);  // Prefer setter over gauge.minValue = 0
-            gauge.animationSpeed = 32; // set animation speed (32 is default value)
-            gauge.set(1250); // set actual value
-        });
-    </script>
+<script src="material-gauge.js"></script>
+<script>
+    var gauge = new Gauge(document.getElementById("gauge"));
+    gauge.value(0.5);
+</script>
+
 </body>
 </html>
