--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gauge Control Example</title>
-    <link rel="stylesheet" href="material-gauge.css">
+    <link rel="stylesheet" src="material-gauge.css">
 </head>
 <body>
 
