--- a/test.html
+++ b/test.html
@@ -1,50 +1,69 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Material Design Gauge</title>
-        <meta name="description"
-              content="Simple Material Design gauge control implemented in pure CSS/HTML">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="material-gauge.css">
-		<style>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Angular Gauge Chart</title>
+    <!-- Include FusionCharts library from CDN -->
+    <script src="https://cdn.fusioncharts.com/fusioncharts/latest/fusioncharts.js"></script>
+    <!-- Include FusionCharts theme file -->
+    <script src="https://cdn.fusioncharts.com/fusioncharts/latest/themes/fusioncharts.theme.fusion.js"></script>
+</head>
+<body>
+    <!-- Container for the chart -->
+    <div id="chart-container" style="width:600px; height:400px; margin: auto;"></div>
 
-			body {
-				color: rgba(0, 0, 0, 0.541176);
-				font-family: Roboto, Helvetica, Arial, sans-serif;
-				font-size: 24px;
-				font-weight: normal;
-				height: 32px;
-				letter-spacing: normal;
-				line-height: 32px;
-				padding-top: 100px;
-			}
+    <script>
+        // Define the data source for the chart
+        const dataSource = {
+          "chart": {
+            "caption": "Hours Per Bay",
+            "lowerlimit": "0",
+            "upperlimit": "10",
+            "showvalue": "1",
+            "numbersuffix": "hr",
+            "theme": "fusion",
+            "showtooltip": "0"
+          },
+          "colorrange": {
+            "color": [
+              {
+                "minvalue": "0",
+                "maxvalue": "5",
+                "code": "#F2726F"
+              },
+              {
+                "minvalue": "4",
+                "maxvalue": "6",
+                "code": "#FFC533"
+              },
+              {
+                "minvalue": "6",
+                "maxvalue": "10",
+                "code": "#62B58F"
+              }
+            ]
+          },
+          "dials": {
+            "dial": [
+              {
+                "value": "4.5"
+              }
+            ]
+          }
+        };
 
-		</style>
-    </head>
-    <body>
-    	<div class="gauge gauge--liveupdate" id="gauge">
-        	<div class="gauge__container">
-        		<div class="gauge__marker"></div>
-        		<div class="gauge__background"></div>
-        		<div class="gauge__center"></div>
-        		<div class="gauge__data"></div>
-        		<div class="gauge__needle"></div>
-        	</div>
-        	<div class="gauge__labels mdl-typography__headline">
-            	<span class="gauge__label--low">No</span>
-            	<span class="gauge__label--spacer"></span>
-            	<span class="gauge__label--high">Yes</span>
-        	</div>
-    	</div>
-        <script src="material-gauge.js"></script>
-		<script>
-
-			var gauge = new Gauge(document.getElementById("gauge"));
-
-			gauge.value(0.43);
-
-		</script>
-	</body>
+        // Render the chart
+        FusionCharts.ready(function() {
+           var myChart = new FusionCharts({
+              type: "angulargauge",
+              renderAt: "chart-container",
+              width: "100%",
+              height: "100%",
+              dataFormat: "json",
+              dataSource
+           }).render();
+        });
+    </script>
+</body>
 </html>
