--- a/dashboard2.html
+++ b/dashboard2.html
@@ -40,7 +40,7 @@
     </div>
     <div class="iframe-container">
         <div style="height: 500px;">
-            <iframe src="text_rotator.html" frameborder="0"></iframe> <!-- Assuming text_rotator.html contains the text rotator -->
+            <iframe src="text_rotator2.html" frameborder="0"></iframe> <!-- Assuming text_rotator.html contains the text rotator -->
         </div>
     </div>
 </body>
