--- a/dashboard2.html
+++ b/dashboard2.html
@@ -9,8 +9,8 @@
             margin: 0; /* Remove default margin */
             padding: 0; /* Remove default padding */
             display: grid; /* Use CSS Grid for layout */
-            grid-template-columns: 1fr 1fr; /* Two equal-width columns */
-            grid-template-rows: repeat(2, minmax(0, 1fr)); /* Two rows */
+            grid-template-columns: repeat(2, 1fr); /* Two equal-width columns */
+            grid-template-rows: repeat(3, minmax(0, 1fr)); /* Three equal-height rows */
             height: 100vh; /* Adjust the height to fill the viewport */
         }
         .iframe-container {
