--- a/dashboard2.html
+++ b/dashboard2.html
@@ -42,7 +42,7 @@
             <iframe src="performance.html" frameborder="0"></iframe>
         </div>
     </div>
-   div class="right-column">
+   <div class="right-column">
         <div class="iframe-container">
             <iframe src="https://www.tickcounter.com/widget/countdown/5051472" frameborder="0"></iframe>
         </div>
