--- a/dashboard2.html
+++ b/dashboard2.html
@@ -9,14 +9,14 @@
             margin: 0; /* Remove default margin */
             padding: 0; /* Remove default padding */
             display: grid; /* Use CSS Grid for layout */
-            grid-template-columns: repeat(2, 1fr); /* Two equal-width columns */
-            grid-template-rows: repeat(3, minmax(0, 1fr)); /* Three equal-height rows */
-            height: 100vh; /* Adjust the height to fill the viewport */
+            grid-template-columns: repeat(2, minmax(0, 1fr)); /* Two equal-width columns */
+            height: auto; /* Auto height to adjust based on content */
         }
         .iframe-container {
             box-sizing: border-box; /* Include padding and border in element's total width and height */
             padding: 5px; /* Add padding */
             border: 2px solid black; /* Add black border */
+            height: 100%; /* Ensure iframes fill their container */
         }
         iframe {
             width: 100%;
@@ -25,14 +25,15 @@
         }
         .left-column {
             display: grid;
-            grid-template-rows: repeat(2, 1fr); /* Two equal-height rows */
+            grid-template-rows: auto; /* Auto height to adjust based on content */
         }
         .right-column {
             display: grid;
-            grid-template-rows: repeat(3, 1fr); /* Three equal-height rows */
+            grid-template-rows: auto; /* Auto height to adjust based on content */
         }
     </style>
 </head>
+<body>
 <body>
     <div class="left-column">
         <div class="iframe-container">
