--- a/test.html
+++ b/test.html
@@ -13,6 +13,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            background-color: #9E9C9B;
         }
         .chart-container {
             margin: 0px;
