--- a/test.html
+++ b/test.html
@@ -75,7 +75,7 @@ var data3 = [
 ];
 
 // The layout of your charts
-var layout = { width: 400, height: 400,paper_bgcolor: #9E9C9B };
+var layout = { width: 400, height: 400,paper_bgcolor: "lightgray" };
 
 // Rendering the charts
 Plotly.newPlot('myDiv1', data1, layout);
