--- a/test.html
+++ b/test.html
@@ -17,6 +17,7 @@
         }
         .chart-container {
             margin: 0px;
+            background-color: #9E9C9B;
         }
     </style>
 </head>
