--- a/test.html
+++ b/test.html
@@ -18,6 +18,7 @@
         .chart-container {
             margin: 0px;
             background-color: #9E9C9B;
+            border: 2px
         }
     </style>
 </head>
