--- a/test.html
+++ b/test.html
@@ -19,6 +19,7 @@
             margin: 0px;
             background-color: #9E9C9B;
             border: 2px
+            border-color: black
         }
     </style>
 </head>
