--- a/test.html
+++ b/test.html
@@ -16,25 +16,29 @@
             background-color: #9E9C9B;
         }
         .chart-container {
-            margin: 0px;
-            background-color: #9E9C9B;
-            border: 2px
-            border-color: black
+            margin: 10px;
+            padding: 10px;
+            background-color: #fff;
+            border: 2px solid black;
+        }
+        .chart-container > div {
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
 <body>
 
 <div class="chart-container">
-    <div id="myDiv1" style="width:400px; height:300px;"></div> <!-- Container for the Plotly chart -->
+    <div id="myDiv1"></div> <!-- Container for the Plotly chart -->
 </div>
 
 <div class="chart-container">
-    <div id="myDiv2" style="width:400px; height:300px;"></div> <!-- Container for the Plotly chart -->
+    <div id="myDiv2"></div> <!-- Container for the Plotly chart -->
 </div>
 
 <div class="chart-container">
-    <div id="myDiv3" style="width:400px; height:300px;"></div> <!-- Container for the Plotly chart -->
+    <div id="myDiv3"></div> <!-- Container for the Plotly chart -->
 </div>
 
 <script>
