--- a/text_rotator2.html
+++ b/text_rotator2.html
@@ -18,7 +18,7 @@
         body {
             background-color: #9E9C9B; /* Set the desired background color */
             display: flex;
-           /* justify-content: center; */
+            justify-content: center;
             align-items: center;
             padding: 0;
         }
