--- a/test.html
+++ b/test.html
@@ -47,11 +47,11 @@ var data1 = [
   {
     domain: { x: [0, 1], y: [0, 1] },
     value: 5.25,
-    title: { text: "Hours Per Bay" },
+    title: { text: "Hours Per Day" },
     type: "indicator",
     mode: "gauge+number+delta",
-    delta: { reference: 6 },
-    gauge: { axis: { range: [null, 10] } }
+    delta: { reference: 166 },
+    gauge: { axis: { range: [null, 200] } }
   }
 ];
 
